# DSCSModelDataEditor

./: .gitignore  .gitmodules  AbstractDSCSModelDataEditorWindow.hpp  CMakeLists.txt  CONTRIBUTING.md  DSCSModelDataEditor.cpp  DSCSModelDataEditorWindow.hpp  DSCSModelDataEditorWindow.ui  DSCSModelLoader.cpp  LICENSE  README.md
src/: CMakeLists.txt  DSCSModelEditorCMake.cpp
src/Commands/: CommandManager.cpp  CommandManager.hpp  Graveyard.hpp  ICommand.cpp  ICommand.hpp
src/FileFormats/DSCS/: DSCStoOpenGL.cpp  DSCStoOpenGL.hpp
src/FileFormats/DSCS/AnimFile/: AnimReadWrite.cpp  AnimReadWrite.hpp
src/FileFormats/DSCS/GeomFile/: CamDataStruct.hpp  GeomReadWrite.hpp  LightSourceDataStruct.hpp  MaterialReadWrite.cpp  MaterialReadWrite.hpp  MeshReadWrite.cpp  MeshReadWrite.hpp
src/FileFormats/DSCS/NameFile/: NameReadWrite.cpp  NameReadWrite.hpp
src/FileFormats/DSCS/SkelFile/: SkelReadWrite.cpp  SkelReadWrite.hpp
src/FileFormats/Textures/: DDS.cpp  DDS.hpp
src/Renderer/: CMakeLists.txt
src/Renderer/DSCS/: AnimationBuffer.hpp  Renderer.cpp  Renderer.hpp
src/Renderer/DSCS/DataObjects/: AnimationDataBlocks.hpp  AnimationSampler.cpp  AnimationSampler.hpp  OpenGLDSCSMaterial.cpp  OpenGLDSCSMaterial.hpp  OpenGLDSCSMesh.cpp  OpenGLDSCSMesh.hpp  OpenGLDSCSTexture.cpp  SkeletonDataBlocks.hpp
src/Renderer/DSCS/RenderObjects/: Camera.cpp  Camera.hpp  Types.hpp
src/Renderer/DSCS/ShaderSystem/cgGL/: Utils.cpp  Utils.hpp  cgGLShaderBackend.hpp  cgGLShaderObject.cpp  cgGLShaderObject.hpp
src/Renderer/DSCS/ShaderSystem/cgGL/OpenGLSettings/: OpenGLSettings.cpp  OpenGLSettings.hpp
src/Renderer/DSCS/ShaderSystem/cgGL/ShaderUniforms/: BaseTexture.hpp  TexCube.hpp
src/Renderer/FileFormats/DSCS/: DSCStoOpenGL.cpp  DSCStoOpenGL.hpp
src/Renderer/FileFormats/DSCS/AnimFile/: AnimReadWrite.hpp
src/Renderer/FileFormats/DSCS/GeomFile/: GeomReadWrite.hpp  MaterialReadWrite.hpp  MeshReadWrite.hpp
src/Renderer/FileFormats/DSCS/NameFile/: NameReadWrite.cpp  NameReadWrite.hpp
src/Renderer/FileFormats/DSCS/SkelFile/: SkelReadWrite.hpp
src/Renderer/FileFormats/Textures/: DDS.cpp  DDS.hpp
src/Renderer/Utils/: BitManip.hpp  Float16.hpp  OpenGL.cpp
src/Renderer/libs/glad/src/: glad.c
src/Renderer/serialisation/: ReadWriter.cpp
src/Renderer/src/DSCS/: AnimationBuffer.hpp  Renderer.cpp
src/Renderer/src/DSCS/DataObjects/: AnimationSampler.cpp  AnimationSampler.hpp  OpenGLDSCSMaterial.cpp  OpenGLDSCSMaterial.hpp  OpenGLDSCSMesh.cpp  OpenGLDSCSMesh.hpp  OpenGLDSCSModel.hpp  OpenGLDSCSTexture.cpp  OpenGLDSCSTexture.hpp  SkeletonDataBlocks.hpp
src/Renderer/src/DSCS/ShaderSystem/cgGL/: ShaderVariables.hpp  Utils.hpp  cgGLShaderBackend.cpp  cgGLShaderBackend.hpp  cgGLShaderObject.hpp
src/Renderer/src/DSCS/ShaderSystem/cgGL/OpenGLSettings/: OpenGLSettings.cpp  OpenGLSettings.hpp
src/Renderer/src/DSCS/ShaderSystem/cgGL/ShaderUniforms/: BaseTexture.hpp  ShaderUniforms.hpp  Tex2D.hpp  TexCube.hpp
src/Renderer/src/FileFormats/DSCS/AnimFile/: AnimReadWrite.hpp
src/Renderer/src/FileFormats/DSCS/GeomFile/: GeomReadWrite.cpp  MaterialReadWrite.hpp
src/Renderer/src/FileFormats/Textures/: DDS.cpp  DDS.hpp
src/Renderer/src/Utils/: Hashing.cpp  Matrix.cpp  OpenGL.cpp  OpenGL.hpp  Vector.cpp
src/Rendering/DSCS/DataObjects/: AnimationDataBlocks.hpp  AnimationSampler.cpp  AnimationSampler.hpp  OpenGLDSCSMaterial.cpp  OpenGLDSCSMaterial.hpp  OpenGLDSCSMesh.cpp  OpenGLDSCSMesh.hpp  OpenGLDSCSModel.hpp  OpenGLDSCSTexture.cpp  OpenGLDSCSTexture.hpp  SkeletonDataBlocks.cpp  SkeletonDataBlocks.hpp
src/Rendering/DSCS/ShaderSystem/cgGL/: ShaderVariables.hpp  Utils.cpp  Utils.hpp  cgGLShaderBackend.cpp  cgGLShaderBackend.hpp  cgGLShaderObject.cpp  cgGLShaderObject.hpp
src/Rendering/DSCS/ShaderSystem/cgGL/OpenGLSettings/: OpenGLSettings.hpp
src/Rendering/DSCS/ShaderSystem/cgGL/ShaderUniforms/: BaseTexture.hpp  ShaderUniforms.hpp  Tex2D.hpp
src/UI/: Camera.hpp  CgSyntaxHighlighter.hpp  InputHandler.hpp  MainWindow.cpp  MainWindow.hpp  RenderWidget.cpp  RenderWidget.hpp  SelectedObjectReferences.hpp  TextureLibrary.hpp  Types.hpp
src/UI/EditorTabs/: AnimationEditor.cpp  AnimationEditor.hpp  MaterialEditor.hpp  MeshEditor.hpp  OpenGLSettingsWidgets.cpp  OpenGLSettingsWidgets.hpp  SkeletonEditor.hpp
src/UI/EditorTabs/MaterialEditor/: MaterialEditor.hpp  OpenGLSettingsEditor.hpp
src/UI/EditorTabs/MaterialEditor/ShaderEditors/: CodeEditor.hpp  PrebuiltShaders.hpp  ShaderEditorTabs.hpp  TabMaterials.hpp  TabShaders.hpp
src/UI/EditorTabs/MaterialEditor/ShaderEditors/ShaderFactory/: ShaderFactory.cpp  ShaderFactory.hpp
src/UI/EditorTabs/MaterialEditor/ShaderEditors/ShaderFactory/ShaderGenerator/: CodeGenerator.hpp  FragmentShader.cpp  Utils.hpp  VertexShader.cpp  VertexShader.hpp
src/UI/EditorTabs/MaterialEditor/ShaderEditors/ShaderFactory/Widgets/: BumpmapBox.hpp  DiffuseColor.hpp  GlassMap.hpp  (+11 more)
src/UI/EditorTabs/ShaderEditors/: CodeEditor.hpp  PrebuiltShaders.hpp  ShaderEditorTabs.hpp  ShaderFactory.hpp  TabMaterials.hpp  TabShaders.hpp
src/UI/EditorTabs/ShaderEditors/ShaderFactory/: ShaderFactory.cpp  ShaderFactory.hpp
src/UI/EditorTabs/ShaderEditors/ShaderFactory/ShaderGenerator/: CodeGenerator.hpp  FragmentShader.cpp  VertexShader.hpp
src/UI/EditorTabs/ShaderEditors/ShaderFactory/Widgets/: BumpmapBox.hpp  DiffuseColor.hpp  GlassMap.hpp  Illumination.hpp  ParallaxBox.hpp  PositionSettings.hpp  Reflection.hpp  SpecularColor.hpp  TextureLayer1.hpp  TextureMap.hpp  TextureSlot.hpp  UVSlot.hpp
src/UI/EditorTabs/ShaderEditors/ShaderGenerator/: FragmentShader.cpp  FragmentShader.hpp  Utils.cpp  Utils.hpp  VertexShader.cpp
src/UI/Spoiler/: Spoiler.cpp  Spoiler.hpp
src/Utils/: BitManip.cpp  Float16.cpp  Hashing.hpp  Matrix.cpp  Matrix.hpp  OpenGL.cpp  OpenGL.hpp  SubarrayView.hpp  Vector.cpp  Vector.hpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/libRenderer/: CMakeLists.txt  export.cpp  export.h
src/pyRenderer/: CMakeLists.txt  Python.cpp
src/serialisation/: Exceptions.cpp  Exceptions.hpp  Macros.hpp  ReadWriter.cpp  ReadWriter.hpp  serialisation.hpp
(+43 files in other folders)
